# pdf-probability-model

./: .gitignore  API_REFERENCE.md  ARCHITECTURE_AND_IMPROVEMENTS.md  CLAUDE.md  COMPLETION_PLAN.md  DOCUMENT_ANALYSIS.md  IMPLEMENTATION_ROADMAP.md  LICENSE  PIPELINE2_OPTIMIZATION.md  README.md  TEMPORALPDF_V2_SPEC.md  V4_NOTEBOOK_PLAN.md  benchmark.py  pyproject.toml  temporalpdf_v2_architecture.md  v2_complete_showcase copy.ipynb  v2_complete_showcase.ipynb  v3_barrier_showcase.ipynb  v4_comprehensive_showcase.ipynb  verify_v2_complete.py
docs/: API.md  ARCHITECTURE.md  COMPLETE_GUIDE.md  DESIGN.md  EXTENDING.md  PIPELINE.md
examples/: basic_usage.py  custom_distribution.py  financial_modeling.py  real_data_example.py
experiments/: __init__.py  barrier_experiment.py  pipeline2_optimization_test.py  prepare_data.py  run_all.py  run_experiments.py  test_32_features.py  test_3pct_barrier.py  test_longer_horizons.py
showcase/: M5_SHOWCASE_SETUP.md  README.md  V2_SHOWCASE_PLAN.md  V3_barrier_showcase.py  expanded_showcase.ipynb  generate_outputs.py  interactive_threshold_explorer.py  m5_comparison.py  m5_eda.py  stock_trading_comparison.ipynb  walkthrough.ipynb  why_distributions_beat_point_predictions.ipynb
src/: Commercial_PDF.py  PDFEXAMPLE.py  calculate_future_mean.py  coefficient_functions.py  data_preprocessing.py  decomposition.py  observed_coefficients.py  pivot_snowflake_tables.py  validator.py  validator2.py  validator3.py
src/temporalpdf/: __init__.py  api.py  features.py  ml.py  utilities.py
src/temporalpdf/analysis/: __init__.py  decomposition.py
src/temporalpdf/backtest/: __init__.py  runner.py  tests.py
src/temporalpdf/coefficients/: __init__.py  config.py  functions.py  rolling.py
src/temporalpdf/core/: __init__.py  distribution.py  grid.py  parameters.py  result.py  volatility.py
src/temporalpdf/decision/: kelly.py  (+3 more)
tests/: __init__.py  test_backtest.py  test_core.py  test_decision.py  test_discovery_v2.py  test_distributions.py  test_dynamics.py  test_nig.py  test_nig_scipy_validation.py  test_scoring.py  test_temporal.py  test_volatility.py  test_weights.py
(+32 files in other folders)
